--- a/server/package.json
+++ b/server/package.json
@@ -7,35 +7,33 @@
     "start": "bun run src/index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/node": "^24.3.0",
-    "bun-types": "^1.2.20",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mailgen": "^2.0.29",
+    "mailgen": "^2.0.30",
     "mailtrap": "^4.2.0",
-    "mongoose": "^8.18.0",
+    "mongoose": "^8.18.3",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^7.0.6",
+    "stripe": "^19.0.0",
     "winston": "^3.17.0"
   }
 }
