--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,7 +9,8 @@
     }
   ],
   "compilerOptions": {
-    "baseUrl": ".",
+    "ignoreDeprecations": "6.0",
+    "baseUrl": "./",
     "paths": {
       "@/*": [
         "./src/*"
